[package]
name = "pyxelium"
version = "0.0.5"
edition = "2021"
description = "Pyxelium is a lightweight pixel-based encryption library that allows you to encode and decode messages within PNG images. It provides Rust functions for encoding and decoding messages using pixel-based encryption."
repository = "https://github.com/Rikatemu/pyxelium"
keywords = ["image", "encoding", "decoding", "message"]
license = "MIT"
authors = ["Jaroslav 'Rikatemu' Patočka"]

[lib]
name = "pyxelium"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
image = "0.24.8"
rand = "0.8.5"

[package.metadata.docs.rs]
features = ["default"]